--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -1,8 +1,9 @@
-<<<<<<< HEAD
+
 html, body {
     margin: 0;
     font-size: 16px;
-=======
+}
+
 @font-face {
     font-family: myFirstFont;
     src: url('../img/font/Poppins-SemiBold.ttf');
@@ -12,6 +13,6 @@ html {
 }
 body {
     margin: 0;
-    background-color: #E6E6FA
->>>>>>> origin/main
+    background-color: #FCFBFF;
+
 }
